.blackbox/tmp/shell_tool_386e5dcd8b08.log

> pusdatin_nu@1.0.0 dev C:\nurisk\backend
> node scripts/dev-cleanup.js && nodemon --exec ts-node src/main.ts

◇ injected env (11) from .env // tip: ⌁ auth for agents [www.vestauth.com]
[dev-cleanup] Checking port 3000...
[dev-cleanup] Port 3000 is in use by PID 15608. Attempting to kill...
[dev-cleanup] Killed PID 15608.
[dev-cleanup] Done. Resolved port: 3000
[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/main.ts`[39m
C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/app.module.ts(30,14): error TS2300: Duplicate identifier 'AppModule'.
src/app.module.ts(90,14): error TS2300: Duplicate identifier 'AppModule'.

    at createTSError (C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1969:10
    at Object.require.extensions.<computed> [as .ts] (C:\nurisk\node_modules\.pnpm\ts-node@10.9.2_@types+node@25.8.0_typescript@6.0.3\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1552:32)
    at Module._load (node:internal/modules/cjs/loader:1354:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19) {
  diagnosticCodes: [ 2300, 2300 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
